tests/baselines/reference/recursiveInheritance.errors.txt
==== tests/cases/compiler/recursiveInheritance.ts (2 errors) ====
    
    interface I5 extends I5 { // error
              ~~
!!! recursiveInheritance.ts(2,11): error TS2100: Type 'I5' recursively references itself as a base type.
        foo():void;
    } 
    
    interface i8 extends i9 { } // error
              ~~
!!! recursiveInheritance.ts(6,11): error TS2100: Type 'i8' recursively references itself as a base type.
    interface i9 extends i8 { } // error
    